--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,57 @@ Test/.project
 org.eclipse.jdt.core.prefs
 .metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.debug.ui.prefs
 .metadata/.plugins/org.eclipse.debug.ui/launchConfigurationHistory.xml
+.metadata/.plugins/org.eclipse.core.resources/.history/0/d08f6f2d45a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/13/f097c22946a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/19/30b9a7e845a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/1e/50ffb63a47a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/28/b0ba1c2847a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/29/f0e0224d47a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/2e/90c7966147a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/34/00c1024e44a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/34/607dd62e46a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/35/507dc9fb45a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/42/e028239044a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/45/802f8a5143a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/48/d087497346a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/48/d0d5f15243a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/4f/a0a6d68846a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/50/a07e532744a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/52/b0f7f13b44a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/55/a0f4fe1147a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/5d/90b0d8f744a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/7/a056c08046a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/7a/7029abc645a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/7b/409b850045a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/82/30af80d345a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/82/5026826d45a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/87/30b8a5d146a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/8b/50a5d83444a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/8e/405ff22e45a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/8f/90e0d6fc43a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/93/80de46c545a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/97/200adf1447a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/9b/005d142646a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/9d/600ed85c44a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/ab/507d733f44a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/af/b08ac70445a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/af/e0e1ec5245a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/d3/2070862047a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/d6/f0feb3c344a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/da/d02ee89646a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/db/80c311df44a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/de/60e964c145a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/e6/607be65c46a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/e8/30663e1c47a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/ee/f000c5d443a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/f/80a91e1d46a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/f7/c0ed67b945a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.history/fd/e08e223a44a50014115bb86dc913f6b5
+.metadata/.plugins/org.eclipse.core.resources/.projects/Test/.indexes/e4/e3/history.index
+.metadata/.plugins/org.eclipse.core.resources/.projects/Test/.indexes/e4/fb/history.index
+.metadata/.plugins/org.eclipse.debug.core/.launches/DemoClass.launch
+.metadata/.plugins/org.eclipse.debug.core/.launches/UseBank.launch
+.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/0.png
+.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/1.png
+.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/2.png
+.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/3.png
