changed gitIgnore file

--- a/.gitignore
+++ b/.gitignore
@@ -10,161 +10,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-.metadata/.lock
-.metadata/.log
-.metadata/.mylyn/.taskListIndex/segments.gen
-.metadata/.mylyn/.taskListIndex/segments_1
-.metadata/.mylyn/.tasks.xml.zip
-.metadata/.mylyn/repositories.xml.zip
-.metadata/.mylyn/tasks.xml.zip
-.metadata/.plugins/org.eclipse.core.resources/.history/2/103d17b942a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/23/5083aebe42a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/4a/e0b676a642a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/5/b084185d42a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/64/e0b7d8a742a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/88/20860bc142a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/94/e0e5a54d42a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.projects/Test/.markers.snap
-.metadata/.plugins/org.eclipse.core.resources/.projects/Test/.syncinfo.snap
-.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/history.version
-.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.index
-.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.version
-.metadata/.plugins/org.eclipse.core.resources/.root/.markers.snap
-.metadata/.plugins/org.eclipse.core.resources/.root/1.tree
-.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
-.metadata/.plugins/org.eclipse.core.resources/1.snap
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.core.resources.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.e4.ui.css.swt.theme.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.jdt.core.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.jdt.launching.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.jdt.ui.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.m2e.discovery.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.mylyn.context.core.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.mylyn.monitor.ui.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.mylyn.tasks.ui.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.recommenders.completion.rcp.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.team.cvs.ui.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.team.ui.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.ide.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.workbench.prefs
-.metadata/.plugins/org.eclipse.debug.core/.launches/EntryClass.launch
-.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
-.metadata/.plugins/org.eclipse.jdt.core/1271342938.index
-.metadata/.plugins/org.eclipse.jdt.core/1384487945.index
-.metadata/.plugins/org.eclipse.jdt.core/156905802.index
-.metadata/.plugins/org.eclipse.jdt.core/1819685514.index
-.metadata/.plugins/org.eclipse.jdt.core/1833648217.index
-.metadata/.plugins/org.eclipse.jdt.core/2326659272.index
-.metadata/.plugins/org.eclipse.jdt.core/2545238116.index
-.metadata/.plugins/org.eclipse.jdt.core/272178059.index
-.metadata/.plugins/org.eclipse.jdt.core/3000285004.index
-.metadata/.plugins/org.eclipse.jdt.core/3004609673.index
-.metadata/.plugins/org.eclipse.jdt.core/3266567714.index
-.metadata/.plugins/org.eclipse.jdt.core/3302703152.index
-.metadata/.plugins/org.eclipse.jdt.core/3321539481.index
-.metadata/.plugins/org.eclipse.jdt.core/3703194086.index
-.metadata/.plugins/org.eclipse.jdt.core/3712507179.index
-.metadata/.plugins/org.eclipse.jdt.core/3954040986.index
-.metadata/.plugins/org.eclipse.jdt.core/4249315662.index
-.metadata/.plugins/org.eclipse.jdt.core/450555687.index
-.metadata/.plugins/org.eclipse.jdt.core/765977872.index
-.metadata/.plugins/org.eclipse.jdt.core/770573466.index
-.metadata/.plugins/org.eclipse.jdt.core/84777399.index
-.metadata/.plugins/org.eclipse.jdt.core/assumedExternalFilesCache
-.metadata/.plugins/org.eclipse.jdt.core/externalFilesCache
-.metadata/.plugins/org.eclipse.jdt.core/externalLibsTimeStamps
-.metadata/.plugins/org.eclipse.jdt.core/invalidArchivesCache
-.metadata/.plugins/org.eclipse.jdt.core/javaLikeNames.txt
-.metadata/.plugins/org.eclipse.jdt.core/nonChainingJarsCache
-.metadata/.plugins/org.eclipse.jdt.core/savedIndexNames.txt
-.metadata/.plugins/org.eclipse.jdt.core/variablesAndContainers.dat
-.metadata/.plugins/org.eclipse.jdt.launching/.install.xml
-.metadata/.plugins/org.eclipse.jdt.launching/libraryInfos.xml
-.metadata/.plugins/org.eclipse.jdt.ui/OpenTypeHistory.xml
-.metadata/.plugins/org.eclipse.jdt.ui/QualifiedTypeNameHistory.xml
-.metadata/.plugins/org.eclipse.jdt.ui/dialog_settings.xml
-.metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
-.metadata/.plugins/org.eclipse.m2e.logback.configuration/logback.1.5.0.20140606-0033.xml
-.metadata/.plugins/org.eclipse.team.cvs.core/.running
-.metadata/.plugins/org.eclipse.ui.workbench/dialog_settings.xml
-.metadata/.plugins/org.eclipse.ui.workbench/workingsets.xml
-.metadata/version.ini
-.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/_0.fdt
-.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/_0.fdx
-.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/_0.fnm
-.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/_0.frq
-.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/_0.nrm
-.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/_0.prx
-.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/_0.tii
-.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/_0.tis
-.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/segments.gen
-.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/segments_1
-.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/write.lock
-.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/jre/jre/1.0.0-SNAPSHOT/_remote.repositories
-.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/jre/jre/1.0.0-SNAPSHOT/jre-1.0.0-20140604.182326-1-call.zip
-.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/jre/jre/1.0.0-SNAPSHOT/maven-metadata-models.xml
-.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/jre/jre/1.0.0-SNAPSHOT/resolver-status.properties
-.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/org/eclipse/recommenders/index/0.0.0-SNAPSHOT/_remote.repositories
-.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/org/eclipse/recommenders/index/0.0.0-SNAPSHOT/index-0.0.0-20140605.014212-1.zip
-.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/org/eclipse/recommenders/index/0.0.0-SNAPSHOT/maven-metadata-models.xml
-.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/org/eclipse/recommenders/index/0.0.0-SNAPSHOT/resolver-status.properties
-Test/.classpath
-Test/.project
-org.eclipse.jdt.core.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.debug.ui.prefs
-.metadata/.plugins/org.eclipse.debug.ui/launchConfigurationHistory.xml
-.metadata/.plugins/org.eclipse.core.resources/.history/0/d08f6f2d45a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/13/f097c22946a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/19/30b9a7e845a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/1e/50ffb63a47a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/28/b0ba1c2847a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/29/f0e0224d47a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/2e/90c7966147a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/34/00c1024e44a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/34/607dd62e46a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/35/507dc9fb45a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/42/e028239044a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/45/802f8a5143a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/48/d087497346a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/48/d0d5f15243a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/4f/a0a6d68846a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/50/a07e532744a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/52/b0f7f13b44a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/55/a0f4fe1147a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/5d/90b0d8f744a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/7/a056c08046a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/7a/7029abc645a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/7b/409b850045a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/82/30af80d345a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/82/5026826d45a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/87/30b8a5d146a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/8b/50a5d83444a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/8e/405ff22e45a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/8f/90e0d6fc43a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/93/80de46c545a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/97/200adf1447a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/9b/005d142646a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/9d/600ed85c44a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/ab/507d733f44a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/af/b08ac70445a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/af/e0e1ec5245a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/d3/2070862047a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/d6/f0feb3c344a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/da/d02ee89646a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/db/80c311df44a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/de/60e964c145a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/e6/607be65c46a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/e8/30663e1c47a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/ee/f000c5d443a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/f/80a91e1d46a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/f7/c0ed67b945a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.history/fd/e08e223a44a50014115bb86dc913f6b5
-.metadata/.plugins/org.eclipse.core.resources/.projects/Test/.indexes/e4/e3/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/Test/.indexes/e4/fb/history.index
-.metadata/.plugins/org.eclipse.debug.core/.launches/DemoClass.launch
-.metadata/.plugins/org.eclipse.debug.core/.launches/UseBank.launch
-.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/0.png
-.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/1.png
-.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/2.png
-.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/3.png
+.metadata/ 
